# tripcrunch

./: AUTHORS  COPYING  Makefile.am  Makefile.in  ProjectHome.md  README  acinclude.m4  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
src/: Makefile.am  Makefile.in  config.h  config.h.in  hash_2chan.c  hash_2chan.h  str_utils.c  str_utils.h  tripcrunch.c  tripcrunch.h
src/.deps/: hash_2chan.Po  tripcrunch.Po
